add support for specifying xml schema urls